test/sema/trait_objects/coerce_impl_to_impl_arg_err.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait A {}

trait B : A {}

trait C {}

fn foo(x: *impl B) {
  // CHECK: [[# @LINE + 1 ]]:7: error: cannot unify '*impl B' with '*impl A'
  bar(x);
}

fn bar(x: *impl A) {}

fn baz(x: *impl A) {
  // CHECK: [[# @LINE + 1 ]]:7: error: cannot unify '*impl A' with '*impl B'
  foo(x);
}

fn main() {}
